# ficsit-companion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  release.yaml
assets/: satisfactory.json
cmake/: imgui.cmake  sdl2.cmake
emscripten/: shell_index.html
ficsit-companion/: CMakeLists.txt
ficsit-companion/include/: app.hpp  base_app.hpp  building.hpp  fractional_number.hpp  game_data.hpp  json.hpp  link.hpp  node.hpp  pin.hpp  production_app.hpp  recipe.hpp  utils.hpp
ficsit-companion/src/: app.cpp  base_app.cpp  building.cpp  fractional_number.cpp  game_data.cpp  json.cpp  link.cpp  main.cpp  node.cpp  pin.cpp  production_app.cpp  recipe.cpp  utils.cpp
scripts/: compare_spoiler.py  data_extractor.py
